feat: return total number of products with list
